fix: 관리자 판매자 권한 검증 강화